--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "json-server": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.5.0",
+    "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.2"
+    "react-stars": "^2.2.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "json-server": "^1.0.0-beta.3",
     "tailwindcss": "^4"
   }
 }
